--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
         <meta content="utf-8" http-equiv="encoding" />
     </head>
-    <body style="margin: 0; padding: 0; overflow: hidden;">
-        <div id="container" style="width: 100%; height: 100%;"></div>
+    <body style="margin: 0; padding: 0; overflow: hidden">
+        <div id="container" style="width: 100%; height: 100%"></div>
     </body>
 </html>
