--- a/src/notifications.css
+++ b/src/notifications.css
@@ -132,7 +132,6 @@
 }
 
 .monaco-notification > .notification-text {
-    text-wrap: wrap;
     font-size: 13px;
     line-height: 22px;
     overflow: hidden;
@@ -142,6 +141,10 @@
     -webkit-user-select: text;
 }
 
+.monaco-notification > .notification-text > span {
+    white-space: normal;
+}
+
 .monaco-notifications,
 .monaco-notifications:focus,
 .monaco-notifications-container,
@@ -149,13 +152,6 @@
 .monaco-notification,
 .monaco-notification:focus {
     outline-color: transparent;
-}
-
-.notification-offset-helper {
-    opacity: 0;
-    position: absolute;
-    line-height: 22px;
-    word-wrap: break-word;
 }
 
 .monaco-notification {
