--- a/src/components/StatusPanel.scss
+++ b/src/components/StatusPanel.scss
@@ -1,6 +1,9 @@
 #monaco-status {
     width: 100%;
     height: 22px;
+    min-height: 22px;
+    max-height: 22px;
+    flex-shrink: 0;
     background-color: var(--vscode-editor-background);
     border-top: 1px solid var(--vscode-dropdown-border);
     position: absolute;
@@ -53,8 +56,8 @@
             width: 6px;
             height: 6px;
             border-radius: 50%;
-            background-color: var(--vscode-notifications-foreground, #3794ff);
-            border: 1px solid var(--vscode-editor-background, #1e1e1e);
+            background-color: var(--vscode-notifications-foreground);
+            border: 1px solid var(--vscode-editor-background);
             box-sizing: border-box;
         }
     }
