--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-        <meta content="utf-8" http-equiv="encoding" />
-        <title>GLua Monaco Editor</title>
-    </head>
-    <body style="margin: 0; padding: 0; overflow: hidden">
-        <div id="root" style="width: 100%; height: 100vh"></div>
-    </body>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <meta content="utf-8" http-equiv="encoding"/>
+    <title>GLua Monaco Editor</title>
+</head>
+<body style="margin: 0; padding: 0; overflow: hidden">
+    <div id="root" style="width: 100%; height: 100vh"></div>
+</body>
 </html>
+
