--- a/src/components/FileExplorer.scss
+++ b/src/components/FileExplorer.scss
@@ -1,7 +1,16 @@
+.sidebar-file-explorer {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-height: 0;
+    overflow: hidden;
+}
+
 .file-explorer-content {
     flex: 1;
     overflow-y: auto;
     overflow-x: hidden;
+    min-height: 0;
 
     &:focus {
         outline-color: transparent;
